@@ -1,6 +1,8 @@
 DIST Text-CSV_XS-0.23.tar.gz 16164 RMD160 3c11af82de160f25a1eb0d05017a64578df06be9 SHA1 cc7e45206f38f7e7cc73e09a1f0303368698bbb2 SHA256 b5b5fdb4908dc58835162b3145aa096eaa38cca8d2e611c37364822b8571c60f
 DIST Text-CSV_XS-0.25.tgz 22857 RMD160 bcb82712145185cc056f355be86844468354142e SHA1 60e208eaadb3eaeb68888a52b99b3efc2d87282e SHA256 746d6d20ce47c8647eb8e614f5d9bde6f2ae7593616d4da6a269db076955ce23
+DIST Text-CSV_XS-0.26.tgz 28328 RMD160 7a7bab1f8ce1a89c3ee52adbbb7a62126abdbad3 SHA1 3d924e720e506ba605be3f717bda5f3f4eb6fd93 SHA256 c0c9a2472a004e15a6ab634dc9ae44ea2339b5667205868ffee211d885dcaad9
 EBUILD Text-CSV_XS-0.23-r1.ebuild 558 RMD160 0a57bff6afd19dcd8672025904bf1b77caad02d1 SHA1 dc6e79c34dc23433ce786a7b32696669194e6355 SHA256 cf48613e5208a73801a25a80a26bf738f12bfc7b3b7bc4a146288bf775685318
 EBUILD Text-CSV_XS-0.25.ebuild 556 RMD160 b0406bcf6c6e5bd2cb036027793fea8ba23e8591 SHA1 3b2c68a414e9a14e6077e88a8ece857e19bc1cd6 SHA256 6fe56eac7c47152d7579ee93549f26024829510bec794d10795c7485bdb6ec65
-MISC ChangeLog 1895 RMD160 532e426623193dd956e1e5482c1175f7c1c59227 SHA1 2e66bb5b7c44406fcf5f9f54adba76b9bbf5078f SHA256 2cee1ab6d6ea88d54146f76f9648970d44caa64ae5c931412303da43028fc46e
+EBUILD Text-CSV_XS-0.26.ebuild 569 RMD160 c5e1e9640c41e6c950ac3f20bc3655a4ae673250 SHA1 5f09e3d7d337ea74d4ee495d842787595fe5e879 SHA256 e586836bff16affd62a51c071a94406620979bca9ef19d1287e2d81b19b37163
+MISC ChangeLog 2027 RMD160 4d13672948a616b31d4058491ba2c7fa42e1d0d9 SHA1 3790708ad19805d75227a2c3d78a36c16e38eae7 SHA256 d52e46cf1337b18cefb08263bac0d72480e30ff116b20ff872b976c5a4780290
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
