@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Text-CSV_XS
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.7 2007/05/12 15:10:10 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.8 2007/05/24 16:52:13 mcummings Exp $
+
+*Text-CSV_XS-0.26 (24 May 2007)
+
+  24 May 2007; Michael Cummings <mcummings@gentoo.org>
+  +Text-CSV_XS-0.26.ebuild:
+  Version bump
 
 *Text-CSV_XS-0.25 (12 May 2007)
 
